assets/css/main.css
/* ... */
.menu .active {
  box-shadow: inset 0px -1px 0px 0px white;
}
.menu li {
  list-style: none;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 14px;
  font-size: .875rem;
}
.menu > li {
  line-height: 20px;
  position: relative;
  -webkit-flex-shrink: 0; /* Safari */
  flex-shrink: 0;
}
.menu > li:hover {
  cursor: pointer;
  cursor: hand;
}
#navigation .menu li a, .menu-modal {
  padding: .35em 0;
  font-weight: 400;
  padding: 20px 15px;
  padding: 16px 13px;
}


.menu-button {
  display: none;
  color: white;
}

#navigation .menu-secondary li {
  font-size: .7rem;
  letter-spacing: initial;
}

#navigation .menu-secondary .login a {
  color: white;
  border: 1px solid white;
  padding: 5px 10px;
  border-radius: 4px;
  margin: 0 10px 0 15px;
  transition: background-color .3s;
}
.menu-secondary .login a:hover {
  cursor: pointer;
}

.menu-secondary > .menu > li > a {
  padding: 10px 15px;
}
#subnavigation .menu li a {
  padding: 7px 10px;
  text-transform: initial;
}

#navigation, #subnavigation {
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
}
#subnavigation {
  -webkit-backdrop-filter: blur(5px);
  border-top: 1px solid rgba(255, 255, 255, 0.3);
}



ul.submenu {
  display: none;
}
/*
.submenu {
  position: absolute;
  z-index: 1;
  display: none;
  left: 1em;
}
.submenu:before {
  position: absolute;
  z-index: -1;
  content: '';
  top: -.5em;
  left: 0;
  border-top: .5em solid transparent;
  border-bottom: .5em solid transparent;
  border-left: .5em solid #222;
}
.submenu li {
  border-bottom: 1px solid #444;
}
.submenu a {
  padding: .5em 1.5em;
  font-size: .9em;
  font-weight: 300;
  color: #fff;
  background: #222;
  white-space: nowrap;
}
.submenu a:hover {
  background: #333;
  color: #fff;
}
*/


#settings {
  display: none;
  opacity: 0;
  transition: opacity 0.6s;
}

#settings.visible {
  display: block;
  opacity: 1;
  transition: opacity 0.6s;
}


.search {
  float: right;
  min-width: 20px;
  height: 32px;
}

.search-box:not(:focus) {
  text-indent: -5000px;
}

.search-box {
  /*
  background: url("../../assets/images/menu-search.svg") no-repeat 10px center;
  */
  background: none;
  background-size: 18px;
  transition: width 0.6s ease-in-out, border-radius 0.6s, background 0.6s, box-shadow 0.6s;
  width: 32px !important;
  height: 32px !important;
  border: none !important;
  cursor: pointer;
  border-radius: initial;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  padding: 0 0 0 38px !important;
  border-radius: initial !important;
  margin-top: 1px;
}

.search-container a img {
  width: 18px;
  height: 18px;
}
.search-container a {
  position: absolute;
  pointer-events: none;
}

#search-submit {
    position: relative;
    left: -5000px;
    display: none;
}
.search-box:focus {
  border: none;
  outline: none;
  box-shadow: none;
  cursor: text;
  width: 240px !important;
  color: white;
  background-color: rgba(255, 255, 255, 0.15);
  padding-right: 5px !important;
}

/* Night */
.styleselector, .fontselector {
  cursor: pointer;
  /*padding: 8px;*/
}
.styleselector img, .fontselector img, .tocselector img {
  max-height: 18px;
}
.tocselector {
  display: none;
}

.fontselector {
  /*
  display: none;
  */
}



.night .main, .night footer, .night #hero { background-color: #2C2C2C; }
body.night {
  color: #CACACA;
  background-color: #2C2C2C;
}
/*
.night img, .night .button, .night .cards, .night #navigation, .night #subnavigation, .night h2, .night h3 {
  filter: brightness(0.8);
  -webkit-filter: brightness(0.8);
}
*/

.night img:not([src*="svg"]),
.night .button,
.night .cards,
.night #navigation,
.night #subnavigation,
.night h2,
.night h3,
.night footer .container {
  filter: brightness(0.9);
}

.night .link {
  background-color: #3a3a3a;
}
.night .callout.warning {
  border-color: #903530;
  color: #dc5a53;
  background-color: #3a3a3a;
}

.night .card {
  background-color: #3a3a3a;
  box-shadow: 0 0 1px rgb(255, 255, 255);
}
.night .card-details {
  background-color: #3a3a3a;
  border-top: solid 1px rgb(113, 113, 113);
}














/* Headings
-------------------------------------------------- */
h1 {
  /*font-size: 2rem;*/
  font-size: 1.7rem;
  font-weight: 400;
  margin-bottom: 1rem;
  line-height: initial;
}
h2 {
  font-size: 1.5rem;
  line-height: initial;
  /*
  font-weight: 300;
  */
  font-weight: initial;
  clear: both;
  margin: 0.5rem 0;
  transition: background-color 0.2s, color 0.2s;
}
article h2, article h3 {
  margin: 1rem 0 .5rem 0;
}
article a:hover {
  opacity: 0.95;
  transition: opacity 0.2s;
}
article a {
  transition: opacity 0.2s;
}
h2 a:hover {
 color: inherit;
}
h3 {
  font-size: 1.2rem;
  line-height: 1.5rem;
  font-weight: 500;
  font-weight: 400;
  clear: both;
  transition: background-color 0.2s, color 0.2s;
}
h4 {
  font-size: 1.1rem;
  line-height: 1.3rem;
  font-weight: 600;
  margin: 1rem 0 .5rem 0;
  clear: both;
}
h1 a, h2 a, h3 a, h4 a {
  color: inherit;
  border: 0 !important;
}




/* Article Content
-------------------------------------------------- */

aside, .aside {
  display: block;
  float: right;
  margin-right: -150px;
  width: 22%;
  clear: both;
  margin-right: -25%;
}

/*
article .text > :not(aside) {
  max-width: 75%;
}
*/
/*
.gallery {
  max-width: 75% !important;
}
*/
article .text aside * {
  max-width: 100%;
}

aside figure {
  padding-top: 0px !important;
  margin-bottom: .2rem;
}
aside figure a img {
  position: relative !important;
  
}




/* Main
-------------------------------------------------- */
.main {
  padding: 1rem 1rem 0 1rem;
  padding: 0 1rem;
  background-color: white;
  flex: 1;
  z-index: 1;
}

.main hr {
  height: 2px;
  background: #ddd;
  width: 100%;
  max-width: 720px;
  margin-bottom: 2rem;
  margin-top: 1rem;
  margin-right: auto;
  /*float: right;*/
}
.main p, .main > ul, .main > ol, blockquote, .gallery {
  margin: 0.5rem 0;
}
article hr {
  max-width: initial !important;
}
/* ... */

